log/build_2023-12-03_12-22-00/mypkg/stderr.log
  File "/home/atsushi8-ss/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 32
    main():
          ^
SyntaxError: invalid syntax

